improvement: keep WebSecurityConfig specific